--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,8 @@
     .nav__links{
            @apply relative text-base text-white font-medium w-fit block after:block after:content-[''] after:absolute after:h-[3px] after:bg-yellow-400 after:w-full after:scale-0 after:hover:scale-100 after:transition after:duration-300 after:origin-right
     }
+    .text-bg{
+        background-image: linear-gradient(to right, #8750f7 0%,#ffff 100%);
+        background-clip: text;
+    }
 }
