--- a/app/globals.css
+++ b/app/globals.css
@@ -9,5 +9,7 @@
     .text-bg{
         background-image: linear-gradient(to right, #8750f7 0%,#ffff 100%);
         background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 }
